metadata/force-app/main/default/objects/CustomName_iqgqZ__c/CustomName_iqgqZ__c.object-meta.xml
<CustomObject>
    <description>Description_SsyOx</description>
    <label>CustomLabel_aFLLI</label>
    <nameField>
        <label>CustomLabel_aFLLI</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_aFLLIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>