metadata/force-app/main/default/objects/CustomName_iqgqZ__c/fields/CustomField_eNFuF__c.field-meta.xml
<CustomField>
    <fullName>CustomField_eNFuF__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldbSMsG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>