metadata/force-app/main/default/objects/CustomName_iqgqZ__c/fields/CustomField_wsjUs__c.field-meta.xml
<CustomField>
    <fullName>CustomField_wsjUs__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldxBFHf</label>
    <length>255</length>
    <type>Text</type>
</CustomField>